# c_language

./: .gitignore  CMakeLists.txt  README.md
.vscode_windows/: launch.json  tasks.json
Array/: CMakeLists.txt  README.md
Array/src/: main.c
Constant/: CMakeLists.txt  README.md
Constant/src/: constant_1.c  constant_2.c  escape.c
Cycle/: CMakeLists.txt  README.md
Cycle/src/: main.c
DataType/: CMakeLists.txt  README.md
DataType/src/: FloatingPoint.c  StoreSize.c
Enumerate/: CMakeLists.txt  README.md
Enumerate/src/: color.c  intToEnum.c  week.c
Function/: CMakeLists.txt  README.md
Function/src/: main.c
Judge/: CMakeLists.txt  README.md
Judge/src/: main.c
Operators/: CMakeLists.txt  README.md
Operators/src/: oper_1.c  oper_2.c  oper_3.c  oper_4.c  oper_5.c
Pointer/: CMakeLists.txt  README.md
Pointer/src/: main.c  pointer_struct.c
Structure/: CMakeLists.txt  README.md
Structure/src/: main.c
Variable/: CMakeLists.txt  README.md
Variable/src/: call_1.c  call_2.c  main.c
