cmake_minimum_required(VERSION 3.16)
project(c_language)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(Array)
add_subdirectory(Constant)
add_subdirectory(Cycle)
add_subdirectory(DataType)
add_subdirectory(Enumerate)
add_subdirectory(Function)
add_subdirectory(Judge)
add_subdirectory(Operators)
add_subdirectory(Pointer)
add_subdirectory(Structure)
add_subdirectory(Variable)
